# snail

./: .gitignore  pyproject.toml
docs/: latency-optimization-report.md
docs/claude/: 00-vision-and-goals.md  01-context-model.md  02-connections-and-pool.md  03-tool-layer.md  04-tool-call-registry.md  05-router.md  06-concurrency.md  07-vendor-capability-matrix.md  08-architecture-diagrams.md  09-pending-items.md  10-discussion-log.md  11-audio.md  12-observability.md  13-mermaid-diagrams.md  README.md  lld-presentation.html
docs/claude/diagrams/: 01-master-system-view-data-control.mmd  02-two-planes-one-active-silent-listeners.mmd  03-context-log-to-projection-to-vendor.mmd  04-control-flow-turn-tool-call-intent-to-re.mmd  05-control-flow-barge-in-cut-now-seam.mmd  06-control-flow-handoff-promotion-the-liste.mmd  07-connection-lifecycle-state-machine.mmd  08-toolcall-lifecycle-fsm-per-registry-entr.mmd  09-pool-assigned-vs-unassigned-recycle.mmd
examples/frontend/: README.md  index.html  package-lock.json  package.json  vitest.config.js
examples/multi-agent/: README.md  config.json
src/snail/: __init__.py
tests/: test_audio_clean.py  test_audio_dsp.py  test_audio_fanout.py  test_audio_pipeline.py  test_audio_pool.py  test_bridge_pipeline.py  test_call_registry.py  test_connections.py  test_context.py  test_gemini_adapter.py  test_opus_codec.py  test_output_gate.py  test_rnnoise_backend.py  test_router.py  test_router_policy.py  test_router_predicate.py  test_session.py  test_soxr_backend.py  test_tools.py  test_transport.py  test_vendor_mock.py
(+73 files in other folders)
